--- a/index.html
+++ b/index.html
@@ -1,66 +1,40 @@
-<script>
-  function capitalize(str) {
-    return str.slice(0, 1).toUpperCase() + str.slice(1);
-  }
-
-  function getComputerChoice() {
-    let num = Math.floor(Math.random() * 3 + 1);
-
-    if (num == 1) {
-      return "Rock";
-    } else if (num == 2) {
-      return "Paper";
-    }
-
-    return "Scissors";
-  }
-
-  function playRound(playerSelection, computerSelection) {
-    if (playerSelection == "Rock") {
-      if (computerSelection == "Rock") {
-        return "Tie!";
-      } else if (computerSelection == "Paper") {
-        return "You Lose!";
-      } else {
-        return "You Win!";
-      }
-    } else if (playerSelection == "Paper") {
-      if (computerSelection == "Rock") {
-        return "You Win!";
-      } else if (computerSelection == "Paper") {
-        return "Tie!";
-      } else {
-        return "You Lose!";
-      }
-    } else {
-      if (computerSelection == "Rock") {
-        return "You Lose!";
-      } else if (computerSelection == "Paper") {
-        return "You Win!";
-      } else {
-        return "Tie!";
-      }
-    }
-  }
-
-  function game() {
-    let playerScore = 0;
-    let computerScore = 0;
-
-    for (let i = 0; i < 5; ++i) {
-      let playerChoice = capitalize(prompt("Rock Paper or Scissors?"));
-      let roundResult = playRound(playerChoice, getComputerChoice());
-
-      if (roundResult === "You Win!") {
-        playerScore++;
-      } else if (roundResult === "You Lose!") {
-        computerScore++;
-      }
-
-      console.log(`Player Score: ${playerScore}`);
-      console.log(`Computer Score: ${computerScore}`);
-    }
-  }
-
-  console.log(game());
-</script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rock, Paper, Scissor!</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="index.js" defer></script>
+  </head>
+  <body>
+    <div class="results">Select an option to play the game</div>
+    <div class="container">
+      <div class="media-player">
+        <div id="player-score">Player Score: 0</div>
+        <div>
+          <img src="./images/rps.png" alt="Player's Choice" id="img-player" />
+        </div>
+      </div>
+      <div class="media-computer">
+        <div id="computer-score">Computer Score: 0</div>
+        <div>
+          <img
+            src="/images/rps.png"
+            alt="Computer's Choice"
+            id="img-computer"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="options">
+      <button id="btn-rock">Rock</button>
+      <button id="btn-paper">Paper</button>
+      <button id="btn-scissor">Scissor</button>
+    </div>
+    <div class="reset">
+      <button id="btn-reset">Reset</button>
+    </div>
+  </body>
+</html>
