Fixed image path

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="computer-score">Computer Score: 0</div>
         <div>
           <img
-            src="/images/rps.png"
+            src="./images/rps.png"
             alt="Computer's Choice"
             id="img-computer"
           />
